--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,17 @@
 	<name>Batch2_UI_Automation</name>
 	<url>http://maven.apache.org</url>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>2.7</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
